--- a/src/styles/_fonts.sass
+++ b/src/styles/_fonts.sass
@@ -1,7 +1,6 @@
-@mixin font($font, $fontName, $urlName: $fontName, $weight: normal, $style: normal) 
-    font-family: '#{$fontName}'
-    src: url('../fonts/#{$font}/#{$urlName}.ttf') format('truetype')
+@mixin font($font, $fontName, $weight: normal ) 
+    font-family: $font
+    src: local("#{$font} #{$fontName}"), url("../assets/fonts/#{$font}/#{$font}-#{$fontName}.woff") format("woff")
     font-weight: #{$weight}
-    font-style: #{$style}
-    font-display: swap
+    font-style: normal
     
