--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -1,6 +1,5 @@
 $OpenSans: 'OpenSans'
 
-
 $font: $OpenSans
 $fontBold: '#{$font}-Bold'
 $fontBoldItalic: '#{$font}-BoldItalic'
@@ -9,30 +8,18 @@ $fontLight: '#{$font}-Light'
 $fontLightItalic: '#{$font}-LightItalic'
 $fontRegular: '#{$font}-Regular'
 
-
-
-$fontExtraBold: '#{$font}-ExtraBold'
-$fontExtraBoldItalic: '#{$font}-ExtraBoldItalic'
-$fontSemibold: '#{$font}-Semibold'
-$fontSemiboldItalic: '#{$font}-SemiboldItalic'
-
-
-$fontBlack: '#{$font}-Black'
-$fontBlackItalic: '#{$font}-BlackItalic'
-$fontMedium: '#{$font}-Medium'
-$fontMediumItalic: '#{$font}-MediumItalic'
-$fontThin: '#{$font}-Thin'
-$fontThinItalic: '#{$font}-ThinItalic'
-
-$fontBlackCondensed: '#{$font}-BlackCondensed'
-
 $color_white: #ffffff
-$color_black: #000
+$color_black: #000000
+$color_black_bg: #101010
 
-$color_Light-Blue: #E4E8F6
-$color_Cyan: #0BBBEF
-$color_Cyan-2: #20CBFD
-$color_Cyan-3: #0CABDA
+$color_gray: #c9c9c9
+$color_green: #1EE165
 
-$color_scrollbar-track: $color_Light-Blue
-$color_scrollbar-thumb: $color_Cyan
+$blackPrimary: #0A0A0A
+$textPrimary: #CECECE
+
+$whiteAlways: #F1F1F1
+$white: #FAFAFA
+
+$color_scrollbar-track: $color_white
+$color_scrollbar-thumb: $color_green
